# GARO

./: .gitignore  Jakefile  LICENSE  Makefile  README.md  docker-compose.yml  espectaculares.html  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
css/: bootstrap.min.css  custom.css  general.css  style.css  stylish-portfolio.css
js/: bootstrap.min.js  main.js  maps.js  unslider.js  video.js
libs/jake-utils/: package.json  tsconfig.json
libs/jake-utils/src/: index.ts  jake.d.ts  project.ts
server/: Dockerfile  default.http  default.https  mime.types  nginx.conf
server/ssl/: default.crt  default.csr  default.key  dhparam.pem
server/static/css/: bootstrap.min.css  style.css  stylish-portfolio.css  unslider.css
src/gateway/: .project  Dockerfile  Jakefile  default.conf  mime-types.conf  nginx.conf
src/server/: .project  Dockerfile  Jakefile  db.sqlite3  pyproject.toml
src/server/res/: ads.yml
src/server/src/: manage.py
src/server/src/app/: models.py  serializers.py  views.py
src/server/src/app/management/commands/: start.py  updateads.py
src/server/src/app/migrations/: 0001_initial.py  0002_auto_20200223_0209.py
src/server/src/app/static/css/: style.css
src/server/src/app/static/images/logos/: facebu.ai
src/server/src/app/static/js/: maps.js  toggler.js  unslider.js  video.js
src/server/src/app/templates/: index.html
src/server/src/conf/: asgi.py  settings.py  urls.py  wsgi.py
templates/: Dockerfile  ads.yml  package.json  package.prod.json  router.js  urls.ts
templates/pug/: ads.yml  index.html  index.pug  layout.pug
(+11 files in other folders)
